k8s/ingress/crowdsec-bouncer-middleware.yaml
# CrowdSec bouncer middleware for Traefik
# Copy in default namespace for IngressRoute compatibility (Traefik CRDs
# enforce same-namespace middleware references by default).
# The kube-system copy is used by standard Ingress objects via annotation.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: default
spec:
  plugin:
    crowdsec-bouncer:
      enabled: true
      crowdsecLapiHost: "10.0.0.4:8080"
      crowdsecLapiKey: "yuX8Qvlb+Ut2MrpskDc1C2HEg6p9nl/f5aC5Uw4u13g"
      crowdsecLapiScheme: "http"
      crowdsecMode: "live"
      defaultDecisionSeconds: 300
      forwardedHeadersCustomName: "X-Forwarded-For"
      forwardedHeadersTrustedIPs:
        - "173.245.48.0/20"
        - "103.21.244.0/22"
        - "103.22.200.0/22"
        - "103.31.4.0/22"
        - "141.101.64.0/18"
        - "108.162.192.0/18"
        - "190.93.240.0/20"
        - "188.114.96.0/20"
        - "197.234.240.0/22"
        - "198.41.128.0/17"
        - "162.158.0.0/15"
        - "104.16.0.0/13"
        - "104.24.0.0/14"
        - "172.64.0.0/13"
        - "131.0.72.0/22"
      updateIntervalSeconds: 15
