k8s/ingress/bookmarked-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarked-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-crowdsec-bouncer@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: traefik
  rules:
  - host: bookmarked-k8s.el-jefe.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookmarked-client
            port:
              number: 80
  tls:
  - hosts:
    - bookmarked-k8s.el-jefe.me
    secretName: bookmarked-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookmarked-api
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`bookmarked-k8s.el-jefe.me`) && PathPrefix(`/api`)
    middlewares:
    - name: crowdsec-bouncer
    - name: bookmarked-strip-api
    services:
    - name: bookmarked-server
      port: 8000
  tls:
    secretName: bookmarked-tls
