k8s/ingress/educationelly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: educationelly-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-educationelly-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: educationelly-k8s.el-jefe.me
    http:
      paths:
      # Client routes
      - path: /
        pathType: Prefix
        backend:
          service:
            name: educationelly-client
            port:
              number: 3000
      # Server API routes
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: educationelly-server
            port:
              number: 8080
