k8s/ingress/firebook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firebook-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: firebook-k8s.el-jefe.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firebook
            port:
              number: 80
