k8s/ingress/keel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: keel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: traefik
  rules:
  - host: keel.el-jefe.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keel
            port:
              number: 9300
  tls:
  - hosts:
    - keel.el-jefe.me
    secretName: keel-tls
