k8s/ingress/podrick-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podrick-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-podrick-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - podrick.el-jefe.me
    secretName: pop-portfolio-tls
  rules:
  - host: podrick.el-jefe.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-portfolio-dashboard
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: devops-portfolio-api
            port:
              number: 5001
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: devops-portfolio-api
            port:
              number: 5001
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: devops-portfolio-dashboard
            port:
              number: 80
