k8s/ingress/portfolio-apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-apps-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # Apply stripPrefix middleware to remove /app-name prefix before forwarding
    traefik.ingress.kubernetes.io/router.middlewares: default-portfolio-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: pop-portfolio.el-jefe.me
    http:
      paths:
      # Bookmarked
      - path: /bookmarked
        pathType: Prefix
        backend:
          service:
            name: bookmarked-client
            port:
              number: 80

      # Firebook
      - path: /firebook
        pathType: Prefix
        backend:
          service:
            name: firebook
            port:
              number: 80

      # IntervalAI
      - path: /intervalai
        pathType: Prefix
        backend:
          service:
            name: intervalai-client
            port:
              number: 80

      # EducationELLy
      - path: /educationelly
        pathType: Prefix
        backend:
          service:
            name: educationelly-client
            port:
              number: 3000

      # EducationELLy GraphQL
      - path: /educationelly-graphql
        pathType: Prefix
        backend:
          service:
            name: educationelly-graphql-client
            port:
              number: 80

      # Code Talk
      - path: /code-talk
        pathType: Prefix
        backend:
          service:
            name: code-talk-client
            port:
              number: 5000
